--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -167,6 +167,7 @@ ul,li{
 .margin15{
     margin: 15px;
 }
+.imgFull{width: 100%;height: 100%}
 
 //titleView为custom或者false时专用，让状态栏显示出来（对于商品详情页等需要显示的则不需要)
 .status_bar {
