--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -128,6 +128,7 @@ ul,li{
     overflow-x: hidden;
 }
 .font12{font-size:12px}
+.font13{font-size:13px}
 .font14{font-size : 14px}
 .font16{font-size : 16px}
 .font18{font-size : 18px}
