修复商家详情

--- a/uni.scss
+++ b/uni.scss
@@ -5,11 +5,11 @@
 
 /* 颜色变量 */
 $wzw-color-price-selling:#E41515;
-$wzw-color-price-marekt:#939393;
+$wzw-color-price-market:#939393;
 
 
 /* 行为相关颜色 */
-$wzw-color-primary: #007aff;
+$wzw-color-primary: #E41515;
 $wzw-color-success: #4cd964;
 $wzw-color-warning: #f0ad4e;
 $wzw-color-error: #dd524d;
