添加商品详情页和一些样式

--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -163,9 +163,15 @@ ul,li{
 .padding15{padding : 15px}
 .padding15-c{padding : 0 15px}
 .padding15-r{padding : 15px 0}
-
+.padding5-10 {padding: 5px 10px;}
 .margin15{
     margin: 15px;
+}
+.marginY10{
+    margin: 10px 0;
+}
+.marginR5 {
+    margin-right: 5px;;
 }
 .imgFull{width: 100%;height: 100%}
 
