增加了一些样式

--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -136,6 +136,9 @@ ul,li{
 .font24{font-size : 24px}
 .font36{font-size : 36px}
 
+.fontweight700 {
+    font-weight: 700;
+}
 .line6{margin-bottom : 6px !important}
 .line4{margin-bottom : 4px !important}
 .line8{margin-bottom : 8px !important}
