feat 新增企业认证页面

--- a/uni.scss
+++ b/uni.scss
@@ -74,6 +74,16 @@ $wzw-font-size-paragraph:30rpx;
 $wzw-color-input:#555;
 $wzw-color-placeholder:#CAC8C8;
 
+
+$x-color-333:#333;
+$x-color-444:#444;
+$x-color-555:#555;
+$x-color-666:#666;
+$x-color-777:#777;
+$x-color-888:#888;
+$x-color-999:#999;
+
+
 /**
 网中网自定义样式
  */
