--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -130,6 +130,7 @@ ul,li{
 .font12{font-size:12px}
 .font13{font-size:13px}
 .font14{font-size : 14px}
+.font15{font-size : 15px}
 .font16{font-size : 16px}
 .font18{font-size : 18px}
 .font20{font-size : 20px}
