--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -65,12 +65,14 @@
   .fz-#{$i} { font-size: ($i)+px; }
 }
 
-
+page{
+  background: #f8f8f8;
+}
 
 
 .page-wrap{
-  min-height: 100vh;
-  background: #f8f8f8;
+  //min-height: 100vh;
+
 }
 
 .color-gray{
