--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -14,6 +14,13 @@
   list-style: none;
 }
 
+
+//图片铺满
+.full-img{
+  width: 100%;
+  height: 100%;
+}
+
 /* rest style end */
 
 /* common style start */
