--- a/uni.scss
+++ b/uni.scss
@@ -13,6 +13,14 @@
  */
 
 /* 颜色变量 */
+$fun-gray-color: #BEBEBE;
+$fun-primary-color:#26C78D;
+$fun-green-color:#26C78D;
+$fun-black-color:#000000;
+$fun-red-color:#F53636;
+$fun-blue-color:#00A8FF;
+
+$fun-border-color:#e7e7e7;
 
 /* 行为相关颜色 */
 $uni-color-primary: #007aff;
@@ -74,3 +82,178 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:36rpx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30rpx;
+
+/** mixins **/
+@mixin cover-img($paddingTop:0px,$bgsize:cover,$bgcolor:#f2f2f2,$repreat:no-repeat) {
+  background: {
+    color: $bgcolor;
+    size: $bgsize;
+    repeat: $repreat;
+  };
+  padding: {
+    top:$paddingTop;
+  };
+}
+
+/* 公共的样式 */
+
+page{
+  background: #f8f8f8;
+}
+
+.img-cover{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background: #fff;
+}
+
+/* 颜色 */
+.c0{
+  color: #000;
+}
+.c1{
+  color: #111;
+}
+.c2{
+  color: #222;
+}
+.c3{
+  color: #333;
+}
+.c4{
+  color: #444;
+}
+.c5{
+  color: #555;
+}
+.c6{
+  color: #666;
+}
+.c7{
+  color: #777;
+}
+.c8{
+  color: #888;
+}
+.c9{
+  color: #999;
+}
+
+// 太多了占空间，常见尺寸就这么多
+@for $i from 4 through 30 {
+  .m-#{$i} { margin: ($i)+px; }
+  .m-t-#{$i} { margin-top: ($i)+px; }
+  .m-b-#{$i} { margin-bottom: ($i)+px; }
+  .m-l-#{$i} { margin-left: ($i)+px; }
+  .m-r-#{$i} { margin-right: ($i)+px; }
+
+  .p-#{$i} { padding: ($i)+px; }
+  .p-t-#{$i} { padding-top: ($i)+px; }
+  .p-b-#{$i} { padding-bottom: ($i)+px; }
+  .p-l-#{$i} { padding-left: ($i)+px; }
+  .p-r-#{$i} { padding-right: ($i)+px; }
+
+
+  .w#{$i} { width: ($i)+px; }
+  .h#{$i} { height: ($i)+px; }
+
+  .fz-#{$i} { font-size: ($i)+px; }
+}
+
+/* flex布局 */
+.flex{
+  display: flex;
+  .flex1{
+    flex: 1;
+  }
+  &-vertical-center{
+    align-items: center;
+  }
+  &-justify-center{
+    justify-content: center;
+  }
+  &-justify-between{
+    justify-content: space-between;
+  }
+}
+
+/* cell，一般用于表单 */
+.group-cell{
+  padding-left:20rpx;
+  box-sizing: border-box;
+  margin-bottom: 30rpx;
+  &:last-child{
+    margin-bottom: 0;
+  }
+  .cell-item{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #eee;
+    padding: 20rpx 0;
+    &:last-child{
+      border-bottom: none;
+    }
+    .label{
+
+      color: #999;
+    }
+    .content{
+      flex: 1;
+      text-align: right;
+      color: #444;
+    }
+    .right{
+      margin: 0 10px;
+    }
+  }
+}
+
+.form{
+  .group-cell{
+    .cell-item{
+      .label{
+        &:not(:empty){
+          width: 180rpx;
+        }
+        color: #333;
+      }
+    }
+  }
+}
+
+/* 边框样式 */
+.bor{
+  border: 1px solid $fun-border-color;
+}
+.bor-b{
+  border-bottom: 1px solid $fun-border-color;
+}
+.bor-r{
+  border-right: 1px solid $fun-border-color;
+}
+.bor-l{
+  border-left: 1px solid $fun-border-color;
+}
+.bor-t{
+  border-top: 1px solid $fun-border-color;
+}
+.nobor{
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+}
+
+
+/* 安全区域 */
+.safearea-box{
+  height: constant(safe-area-inset-bottom);
+  height: env(safe-area-inset-bottom);
+  width: 100%;
+  &.fixed{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
+}
