--- a/uni.scss
+++ b/uni.scss
@@ -12,6 +12,7 @@
  * 如果你的项目同样使用了scss预处理，你也可以直接在你的 scss 代码中使用如下变量，同时无需 import 这个文件
  */
 
+
 /* 颜色变量 */
 $fun-gray-color: #BEBEBE;
 $fun-primary-color:#26C78D;
@@ -82,6 +83,12 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:36rpx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30rpx;
+
+// 定义函数 rpx
+@function rpx($value) {
+  @return $value * 1rpx;
+}
+
 
 /** mixins **/
 @mixin cover-img($paddingTop:0px,$bgsize:cover,$bgcolor:#f2f2f2,$repreat:no-repeat) {
@@ -167,11 +174,31 @@ page{
   .flex1{
     flex: 1;
   }
-  &-vertical-center{
+  &-row{
+    flex-direction: row;
+  }
+  &-column{
+    flex-direction: column;
+  }
+  //水平
+  &-vertical-c{
     align-items: center;
   }
-  &-justify-center{
+  &-vertical-b{
+    align-items: flex-end;
+  }
+  &-vertical-t{
+    align-items: flex-end;
+  }
+  //内容分布
+  &-justify-c{
     justify-content: center;
+  }
+  &-justify-l{
+    justify-content: flex-start;
+  }
+  &-justify-r{
+    justify-content: flex-end;
   }
   &-justify-between{
     justify-content: space-between;
