feat(分享赚): 新增分享赚列表页
1.还缺个人中心的接口 2.广告位数据写死的

--- a/uni.scss
+++ b/uni.scss
@@ -356,6 +356,15 @@ page{
     text-overflow: ellipsis;
     overflow: hidden;
   }
+  &-center{
+    text-align: center;
+  }
+  &-left{
+    text-align: left;
+  }
+  &-right{
+    text-align: right;
+  }
 }
 
 
