feat(商品详情页): 优化商品详情页（参照淘宝)
1.顶部样式改变，两套样式根据scrollTop来切换 2.支持点击顶部tab切换内容区域 3.滑动切换内容区域顶部tab的activeIdx同步切换 4.顶部tab切换新增动效

--- a/uni.scss
+++ b/uni.scss
@@ -118,6 +118,7 @@ page {
   height: constant(safe-area-inset-bottom);
   height: env(safe-area-inset-bottom);
   width: 100%;
+  background: #fff;
 
   &.fixed {
     position: fixed;
