fix(推荐商品): 优化推荐商品组件
1.个人中心的商品推荐 2.购物车的商品推荐

--- a/uni.scss
+++ b/uni.scss
@@ -109,9 +109,9 @@ $uni-font-size-paragraph: 30rpx;
 
 /* 公共的样式 */
 
-page {
-  background: #f8f8f8;
-}
+//page {
+//  background: #f8f8f8;
+//}
 
 // 安全区域
 .safearea-box {
