fix(购物车的): 重构购物车的部分逻辑
1.全选、反选 2、商品的数量增减等逻辑统一封装 3.优化页面中不规范的形参命名 4.理顺事件机制，去除冗余代码

--- a/uni.scss
+++ b/uni.scss
@@ -17,9 +17,10 @@ $fun-gray-color: #BEBEBE;
 $fun-primary-color: #26C78D;
 $fun-green-color: #26C78D;
 $fun-black-color: #000000;
-$fun-red-color: #F53636;
+$fun-red-color: #f53636;
 $fun-blue-color: #00A8FF;
 $fun-yellow-color: #FFE300;
+$fun-orange-color: #ff7800;
 
 $fun-selling-color: #E41515; //商品现在价格
 $fun-market-color: #939393; //原价
