--- a/assets/app.scss
+++ b/assets/app.scss
@@ -441,3 +441,22 @@ page {
   height: 0;
   color: transparent;
 }
+
+
+@keyframes zy {
+  10% {
+    transform: rotate(25deg);
+  }
+  20% {
+    transform: rotate(-20deg);
+  }
+  30% {
+    transform: rotate(10deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  50%, 100% {
+    transform: rotate(0deg);
+  }
+}
