feat(商家详情): 商家详情第三套模板提测

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -84,7 +84,7 @@ page {
   margin-bottom: env(safe-area-inset-bottom);
 }
 
-.p-b-safe-area{
+.b-safe-area{
   bottom: constant(safe-area-inset-bottom);
   bottom: env(safe-area-inset-bottom);
 }
