--- a/assets/goods.scss
+++ b/assets/goods.scss
@@ -22,14 +22,14 @@
       .info {
         position: relative;
         background: white;
-        padding: 10px 0;
+        padding: 10px;
         box-sizing: border-box;
         
         
         .title {
-          height: 42px;
+          max-height: 42px;
           line-height: 21px;
-          padding: 0 4px;
+          // padding: 0 4px;
           overflow: hidden;
           text-overflow: ellipsis;
           color: #444;
@@ -119,7 +119,8 @@
             text-overflow: ellipsis;
             line-height: 21px;
             color: #444;
-            margin: 10px 0;
+            // margin: 10px 0;
+            margin-bottom: 10px;
             font-size: 14px;
           }
           
@@ -240,7 +241,7 @@
           width: 100%;
           overflow-x: hidden;
           overflow-y: hidden;
-          height: 42px;
+          max-height: 42px;
           text-overflow: ellipsis;
           line-height: 21px;
           color: #444;
