fix(商家详情): 核对商家详情的四个模板样式与设计图的差别并修改
1.订单部的状态栏支持动态修改  2.默认模版的图标和部分样式的活跃色修改  3.第二套模板的加号支持唤起规格选择框，可以直接将商品加入购物车。

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -307,23 +307,23 @@ page {
 
 /* 边框样式 */
 .bor {
-  border: 1px solid $fun-border-color;
+  border: 1rpx solid $fun-border-color;
 }
 
 .bor-b {
-  border-bottom: 1px solid $fun-border-color;
+  border-bottom: 1rpx solid $fun-border-color;
 }
 
 .bor-r {
-  border-right: 1px solid $fun-border-color;
+  border-right: 1rpx solid $fun-border-color;
 }
 
 .bor-l {
-  border-left: 1px solid $fun-border-color;
+  border-left: 1rpx solid $fun-border-color;
 }
 
 .bor-t {
-  border-top: 1px solid $fun-border-color;
+  border-top: 1rpx solid $fun-border-color;
 }
 
 .nobor {
