--- a/uni.scss
+++ b/uni.scss
@@ -24,7 +24,7 @@ $fun-orange-color: #ff7800;
 
 $fun-selling-color: #E41515; //商品现在价格
 $fun-market-color: #939393; //原价
-$fun-border-color: #e7e7e7;
+$fun-border-color: #eee;
 
 /** mixins **/
 @mixin cover-img($bgsize:cover,$paddingTop:0px,$bgcolor:#f2f2f2,$repreat:no-repeat,$position:center) {
