同步君相及贝的更改到o2o

--- a/uni.scss
+++ b/uni.scss
@@ -21,6 +21,7 @@ $fun-red-color: #f53636;
 $fun-blue-color: #00A8FF;
 $fun-yellow-color: #FFE300;
 $fun-orange-color: #ff7800;
+$fun-tag-color:#FFF5F5;
 
 $fun-selling-color: #E41515; //商品现在价格
 $fun-market-color: #939393; //原价
