修复为不带直播的

--- a/src/manifest.json.tmpl
+++ b/src/manifest.json.tmpl
@@ -76,10 +76,10 @@
         },
         "usingComponents" : true,
         "plugins" : {
-           "live-player-plugin" : {
-               "version" : "1.0.15",
-               "provider" : "wx2b03c6e691cd7370"
-           }
+           //           "live-player-plugin" : {
+           //               "version" : "1.0.15",
+           //               "provider" : "wx2b03c6e691cd7370"
+           //           }
         },
         "permission" : {
             "scope.userLocation" : {
